--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch ./src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8.57.0",
+    "sequelize-typescript": "^2.1.6",
     "tsx": "^4.7.1",
     "typescript": "^5.4.3"
   },
