--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch ./src/server.ts"
+    "start": "node ./dist/server.js",
+    "dev": "tsx watch ./src/server.ts",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
